fixed layout spacing

--- a/main.css
+++ b/main.css
@@ -25,7 +25,7 @@ main {
   justify-content: center;
   border: 1px solid blue;
   padding: 2em;
-  width: 80%;
+  width: 100%;
 }
 
 
